fixes image sizing and admin view spacing

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -351,6 +351,7 @@ nav {
 	height: 304px;
 	img {
 		height: 200px;
+		width: 133px;
 		margin: 0em 40px 16px;
 	}
 	p {
@@ -480,6 +481,7 @@ nav {
 		width: 720px;
 		img {
 			height: 240px;
+			width: initial;
 		}
 		.product {
 			height: 336px;
@@ -535,6 +537,7 @@ nav {
 		width: 560px;
 		img {
 			height: 300px;
+			width: initial;
 		}
 		.product {
 			height: 400px;
@@ -553,6 +556,7 @@ nav {
 		width: 91vw;
 		img {
 			height: 50vw;
+			width: initial;
 			margin: 0 6vw 8px;
 		}
 		.product {
